<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hama Joke</string>
    
    <string name="action_settings">Options</string>
    
    <string name="lblNameMain">Nom :</string>
    
    <string name="lblNameOption">Nom :</string>
    <string name="txtHintOptionsRep">Saisissez le nom du répertoire</string>
    <string name="btnSave">Sauvegarder</string>
    <string name="btnImport">Importer un fichier son</string>

</resources>
